refactor: postcontrollerTest 수정